# RAT

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  cargo.toml  docker-compose.yml  readme.md  todo.md
agent/: Cargo.toml
agent/src/: config.rs  error.rs  init.rs  main.rs  run.rs
client/: Cargo.toml
client/src/: config.rs  error.rs  main.rs
client/src/api/: create_job.rs  get_agent.rs  get_job_result.rs  list_agents.rs  list_jobs.rs  mod.rs
client/src/cli/: agents.rs  create_job.rs  exec.rs  get_job_result.rs  identity.rs  job.rs  list_agents.rs  list_jobs.rs  mod.rs
common/: Cargo.toml
common/src/: api.rs  crypto.rs  entities.rs  lib.rs
db/migrations/: 001_init.sql
server/: Cargo.toml
server/RAT/: bruno.json  create_agent.bru  create_job.bru  get_jobs.bru  health_check.bru  list_agents.bru
server/db/migrations/: 001_init.sql
server/src/: common.rs  config.rs  entities.rs  error.rs  lib.rs  main.rs
server/src/api/: mod.rs  state.rs
server/src/api/routes/: agents.rs  jobs.rs  mod.rs
server/src/repository/: agents.rs  jobs.rs  mod.rs
server/src/service/: agents.rs  job.rs  mod.rs
src/: common.rs  config.rs  db.rs  entities.rs  error.rs  main.rs
src/api/: mod.rs  state.rs
src/api/routes/: agents.rs  jobs.rs  mod.rs
src/repository/: jobs.rs
src/service/: job.rs  mod.rs
