[package]
name = "rat"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "rat"

[dependencies]
actix-web = "4.11.0"
dotenv = "0.15.0"
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio-rustls", "postgres", "migrate"] }
thiserror = "2.0.12"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
