[package]
name = "agent"
version = "0.1.0"
edition = "2024"

[dependencies]
server = { path = "../server" }
common = { path = "../common" }
ureq = { version = "2.1", features = ["tls", "json"] }
uuid = { version = "1.16.0", features = ["v4"] }
dirs = "6.0.0"
log = "0.4.27"
local-ip-address = "0.6.5"
whoami = "1.6.0"
rand = "0.7"
ed25519-dalek = "1"
x25519-dalek = "1"
base64 = "0.13"
chacha20poly1305 = "0.9"
blake2 = "0.9"
zeroize = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
