[package]
name = "client"
version = "0.1.0"
edition = "2024"

[dependencies]
server = { path = "../server" }
thiserror = "2.0.12"
uuid = "1.16.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
prettytable = "0.10.0"
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["cargo"] }
log = "0.4.27"
ed25519-dalek = "1"
x25519-dalek = "2.0.1"
chacha20poly1305 = "0.10.1"
blake2 = "0.10.6"
rand = "0.7"
base64 = "0.13"
