[package]
name = "common"
version = "0.1.0"
edition = "2024"

[dependencies]
rand = "0.7"
ed25519-dalek = "1"
x25519-dalek = "1"
base64 = "0.13"
uuid = { version = "1.17.0", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.5", features = [
    "runtime-tokio-rustls",
    "postgres",
    "migrate",
    "json",
    "chrono",
    "time",
    "uuid",
] }
